[package]
name = "bevy_mod_sysfail"
authors = ["Nicola Papale"]
description = "Decorate your bevy system with the sysfail macro attribute to handle failure."
license = "Apache-2.0"
readme = "README.md"
keywords = ["bevy", "tool", "macro", "error", "trait"]
categories = ["game-development"]
repository = "https://github.com/nicopap/bevy_mod_sysfail"
exclude = ["assets", ".github"]
version = "8.0.0"
edition = "2021"

[workspace]
members = ["macros_impl"]

[features]
default = ["full"]
full = ["dep:bevy"]

[dependencies]
bevy_ecs = { version = "0.14", default-features = false }
bevy_utils = "0.14"

bevy = { version = "0.14", default-features = false, optional = true }
bevy_mod_sysfail_macros = { path = "./macros_impl", version = "5" }
anyhow = { version = "1", default-features = false }

[dev-dependencies]
bevy = { version = "0.14", default-features = true }
bevy-debug-text-overlay = { version = "9", git = "https://github.com/knutsoned/bevy-debug-text-overlay" }
anyhow = "1"
thiserror = "1"

[workspace.metadata.release]
dependent-version = "upgrade"

[package.metadata.release]
pre-release-replacements = [
  {search="\\| 0.13 \\| [0-9.]* \\|",replace="| 0.13 | {{version}} |",file="README.md"},
  {search="bevy_mod_sysfail/[0-9.]+/",replace="bevy_mod_sysfail/{{version}}/",file="README.md"},
  {search="bevy_mod_sysfail/blob/v[0-9.]+/",replace="bevy_mod_sysfail/blob/v{{version}}/",file="README.md"},
]

